# veritas-warden

./: .gitignore  README.md  index.html  pyproject.toml  requirements.txt
common/: constants.py
integrations/claude_code/: hook.py
integrations/openclaw/: wrapper.py
integrations/sdk/: wrapper.py
scripts/: run_warden.sh
tests/: test_normalizer.py  test_policy.py  test_server.py  test_session.py
warden/: __main__.py  audit.py  cli.py  models.py  normalizer.py  policy.py  server.py  session.py
website/: index.html
