[project]
name = "veritas-warden"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
warden = "warden.cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["."]
include = ["warden*", "common*", "integrations*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
